[gd_scene load_steps=5 format=2]

[ext_resource path="res://Ressources/Theme.tres" type="Theme" id=1]
[ext_resource path="res://Scripts/DeadMenu.gd" type="Script" id=2]
[ext_resource path="res://Ressources/04B_30__.TTF" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 3 )

[node name="DeadMenu" type="Control"]
pause_mode = 2
anchor_left = -0.5
anchor_top = -0.5
anchor_right = 0.5
anchor_bottom = 0.5
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Restart" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -177.5
margin_top = -149.5
margin_right = 177.5
margin_bottom = -90.5
text = "RESTART"

[node name="Menu" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -105.5
margin_top = -29.5
margin_right = 105.5
margin_bottom = 29.5
text = "MENU"

[node name="HighScore" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -237.5
margin_top = 90.5
margin_right = 237.5
margin_bottom = 149.5
text = "HIGH SCORE"

[node name="Panel2" type="Panel" parent="."]
visible = false
anchor_left = 0.25
anchor_top = 0.25
anchor_right = 0.75
anchor_bottom = 0.75

[node name="Label" type="Label" parent="Panel2"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_right = 20.0
margin_bottom = 53.0
grow_horizontal = 2
text = "High Scores"
align = 1

[node name="Label2" type="Label" parent="Panel2"]
anchor_top = 0.098
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 47.08
align = 1

[node name="Button2" type="Button" parent="Panel2"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -6.0
margin_right = 6.0
margin_bottom = 59.0
grow_horizontal = 2
text = "Return"

[node name="Panel" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -480.0
margin_top = -270.0
margin_right = 480.0
margin_bottom = 270.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel"]
anchor_left = 0.097
anchor_top = 0.093
anchor_right = 0.903
anchor_bottom = 0.294
margin_left = -0.120003
margin_top = -0.220001
margin_right = 0.119934
margin_bottom = 0.240005
grow_horizontal = 2
text = "Enter your name
to save your score"
align = 1

[node name="LineEdit" type="LineEdit" parent="Panel"]
anchor_left = 0.226
anchor_top = 0.442
anchor_right = 0.774
anchor_bottom = 0.558
margin_left = 0.0399933
margin_top = -0.180023
margin_right = -0.0400391
margin_bottom = 0.179993
align = 1
placeholder_text = "Your Name"
caret_blink = true

[node name="CheckBox" type="CheckBox" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -134.0
margin_top = 51.513
margin_right = 134.0
margin_bottom = 92.513
grow_horizontal = 2
custom_fonts/font = SubResource( 1 )
text = "Save name"

[node name="Button" type="Button" parent="Panel"]
anchor_left = 0.342
anchor_top = 0.706
anchor_right = 0.658
anchor_bottom = 0.815
margin_left = 0.179993
margin_top = -0.240021
margin_right = -0.180054
margin_bottom = -0.100037
text = "Confirm"

[connection signal="pressed" from="Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="Menu" to="." method="_on_Menu_pressed"]
[connection signal="pressed" from="HighScore" to="." method="_on_HighScore_pressed"]
[connection signal="pressed" from="Panel2/Button2" to="." method="_on_Button2_pressed"]
[connection signal="gui_input" from="Panel/LineEdit" to="." method="_on_LineEdit_gui_input"]
[connection signal="pressed" from="Panel/Button" to="." method="_on_Button_pressed"]
